feat: implementation of mandatory field validations and files for adding images.
